refactor: organiza estrutura HTML com divs e classes para layout

--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
 </head>
+
 <body>
-    <img src="img/celular.png">
+    <div class="caixa-celular">
+        <img src="img/celular.png">
+    </div>
 
-    <img src="img/insta-logo.png"> 
+    <div>
+        <div>
+            <img src="img/insta-logo.png">
 
-    <input placeholder="Telefone, nome de usuário ou email">
-    <input placeholder="Senha"> 
+            <input placeholder="Telefone, nome de usuário ou email">
+            <input placeholder="Senha">
 
-    <button>Entrar</button>
+            <button>Entrar</button>
 
-    <a>Entrar com o Facebook</a>
-    <a>Esqueceu a senha?</a>
+            <a>Entrar com o Facebook</a>
+            <a>Esqueceu a senha?</a>
+        </div>
+        <div>
+            <p>Não tem uma conta?</p><a>Cadastrar-se</a>
+        </div>
 
-    <p>Não tem uma conta?</p><a>Cadastrar-se</a>
+        <p>Obtenha o aplicativo</p>
 
-    <p>Obtenha o aplicativo</p>
-
-    <img src="img/ios.png">
-    <img src="img/googleplay.png">
+        <div>
+            <img src="img/ios.png">
+            <img src="img/googleplay.png">
+        </div>
+    </div>
 </body>
+
 </html>
