feat: adiciona estilos iniciais e layout base da página do Instagram

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Instagram</title>
 </head>
 
 <body>
-    <div class="caixa-celular">
-        <img src="img/celular.png">
+    <div>
+        <img src="img/celular.png" class="img-celular">
     </div>
 
-    <div>
-        <div>
+    <div class="container-itens">
+        <div class="container-form">
             <img src="img/insta-logo.png">
 
             <input placeholder="Telefone, nome de usuário ou email">
@@ -31,7 +32,7 @@
         <p>Obtenha o aplicativo</p>
 
         <div>
-            <img src="img/ios.png">
+            <img src="img/ios.png" >
             <img src="img/googleplay.png">
         </div>
     </div>
