--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
 
     <div class="container-itens">
         <div class="container-form">
-            <img src="img/insta-logo.png">
+            <img src="img/insta-logo.png" class="insta-logo">
 
             <input placeholder="Telefone, nome de usuário ou email">
-            <input placeholder="Senha">
+            <input placeholder="Senha" type="password">
 
             <button>Entrar</button>
 
-            <a>Entrar com o Facebook</a>
-            <a>Esqueceu a senha?</a>
+            <div class="divider"><span>OU</span></div>
+
+            <a class="login-facebook">
+                <img src=""> 
+                Entrar com o Facebook</a>
+            <a class="esqueceu-senha">Esqueceu a senha?</a>
         </div>
-        <div>
-            <p>Não tem uma conta?</p><a>Cadastrar-se</a>
+        <div class="container-cadastro">
+            <p class="paragrafo-conta">Não tem uma conta?</p><a class="link-cadastro">Cadastrar-se</a>
         </div>
 
-        <p>Obtenha o aplicativo</p>
+        <p class="paragrafo-app">Obtenha o aplicativo</p>
 
         <div>
             <img src="img/ios.png" >
