feat(layout): aprimora interface e adiciona imagens dinâmicas na seção do celular

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <div>
+    <div class="container-imagens">
         <img src="img/celular.png" class="img-celular">
+        <img src="img/insta1.png" class="imagem-celular">
+        <img src="img/insta2.png" class="imagem-celular">
     </div>
 
     <div class="container-itens">
@@ -25,7 +27,7 @@
             <div class="divider"><span>OU</span></div>
 
             <a class="login-facebook">
-                <img src=""> 
+                <img src="img/logo-face.webp" class="logo-face"> 
                 Entrar com o Facebook</a>
             <a class="esqueceu-senha">Esqueceu a senha?</a>
         </div>
@@ -35,11 +37,15 @@
 
         <p class="paragrafo-app">Obtenha o aplicativo</p>
 
-        <div>
-            <img src="img/ios.png" >
-            <img src="img/googleplay.png">
+        <div class="container-app">
+            <img src="img/ios.png" alt="logo do ios" class="logo-ios">
+            <img src="img/android.jpg" alt="logo do android" class="logo-android">
         </div>
     </div>
 </body>
+
+<script>
+    
+</script>
 
 </html>
