--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container-imagens">
         <img src="img/celular.png" class="img-celular">
-        <img src="img/insta1.png" class="imagem-celular">
-        <img src="img/insta2.png" class="imagem-celular">
+        <img src="img/insta1.png" class="imagem-celular"> 
+        <img src="img/insta2.png" class="imagem-celular" id="troca-imagem">
     </div>
 
     <div class="container-itens">
@@ -32,7 +32,7 @@
             <a class="esqueceu-senha">Esqueceu a senha?</a>
         </div>
         <div class="container-cadastro">
-            <p class="paragrafo-conta">Não tem uma conta?</p><a class="link-cadastro">Cadastrar-se</a>
+            <p class="paragrafo-conta">Não tem uma conta?</p><a class="link-cadastro">Cadastre-se</a>
         </div>
 
         <p class="paragrafo-app">Obtenha o aplicativo</p>
@@ -45,7 +45,22 @@
 </body>
 
 <script>
-    
+    let imagem = document.getElementById("troca-imagem")
+
+    function trocaImagem() {
+        
+        if(imagem.style.opacity == 0) {
+            imagem.style.opacity = 1
+        } else {
+            imagem.style.opacity = 0
+        }
+
+    }
+
+    setInterval(function () {
+        trocaImagem()
+    }, 5000);
+
 </script>
 
 </html>
